name:                nonsingular-blog
version:             0.1.0.0
synopsis:            nonsingular.net blog
description:         Please see README.md
homepage:            https://github.com/saeidw/nonsingular.net#readme
license:             BSD3
license-file:        LICENSE
author:              Saeid Al-Wazzan
maintainer:          saeid.wazzan@nonsingular.net
copyright:           2016 Saeid Al-Wazzan
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable nonsingular
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       filepath == 1.4.*,
                       containers == 0.5.*,
                       time == 1.5.*,
                       hakyll == 4.7.*
